--- a/_sass/_media-queries.scss
+++ b/_sass/_media-queries.scss
@@ -21,8 +21,8 @@
   }
 
   .site-header .site-title {
-    font-size: $h3;
     float: left;
+    a {font-size: $h2;}
   }
 
   .site-header .site-nav {
