--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -5,18 +5,18 @@
 
 .posts .post {
   margin-bottom: 0.75em;
-  border-bottom: thin solid #f3f3f3;
+  border-bottom: 2px solid #f3f3f3;
 }
 
 .posts .post:last-child {
-  border-bottom: none;
   margin-bottom: .375em;
   padding-bottom: 0;
 }
 
 .post-link .post-title {
   margin-top: 0;
-  font-weight: 600;
+  font-weight: 400;
+  font-size: $h2;
   color: #333;
 }
 
