--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer class="center">
   <div class="measure">
+    This website belongs to <a href="http://amandogra.com">Aman Dogra</a>.
     Based on the theme crafted by <a href="http://johnotander.com">John Otander</a> (<a href="https://twitter.com/4lpine">@4lpine</a>), available on <a href="https://github.com/johnotander/pixyll">Github</a>. <br />
-    Modified by <a href="http://amandogra.com">Aman Dogra</a>.
   </div>
 </footer>
