--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -52,9 +52,10 @@ $darken-1: rgba(#000,.0625) !default;
 $darken-2: rgba(#000,.125) !default;
 $darken-3: rgba(#000,.25) !default;
 $darken-4: rgba(#000,.5) !default;
+$wet-asphalt: #34495e !default;
 
 $text-color: #46433A;
-$anchor-text-color: #CE534D;
+$anchor-text-color: #27ae60; //#CE534D;
 $background-color: #F1EED9;
 
 
