--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
   <div class="mt2 wrap">
     <div class="measure">
       <h1 class="site-title">
-          <a href="{{ site.url }}">{{ site.title }}</a>
+          <a href="{{ site.baseurl }}/">{{ site.title }}</a>
       </h1>
       <nav class="site-nav">
         {% include navigation.html %}
