--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,62 @@
-<footer class="center">
-  <div class="measure">
-    This website belongs to <a href="http://amandogra.com">Aman Dogra</a>.
-    Based on the theme crafted by <a href="http://johnotander.com">John Otander</a> (<a href="https://twitter.com/4lpine">@4lpine</a>), available on <a href="https://github.com/johnotander/pixyll">Github</a>. <br />
+<footer class="site-footer">
+
+  <div class="wrapper">
+
+    <h2 class="footer-heading">{{ site.title }}</h2>
+
+    <div class="footer-col-wrapper">
+      <div class="footer-col footer-col-1">
+        <ul class="contact-list">
+          <li>{{ site.title }}</li>
+          <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
+        </ul>
+      </div>
+
+      <div class="footer-col footer-col-2">
+        <ul class="social-media-list">
+            {% if site.github_username %}
+            <li>
+                <a href="https://github.com/{{ site.github_username }}">
+                    <i class="fa fa-github"></i> GitHub
+                </a>
+            </li>
+            {% endif %}
+            {% if site.twitter_username %}
+            <li>
+                <a href="https://twitter.com/{{ site.twitter_username }}">
+                    <i class="fa fa-twitter"></i> Twitter
+                </a>
+            </li>
+            {% endif %}
+            {% if site.linkedin_username %}
+            <li>
+                <a href="https://linkedin.com/in/{{ site.linkedin_username }}">
+                    <i class="fa fa-linkedin"></i> LinkedIn
+                </a>
+            </li>
+            {% endif %}
+            {% if site.google_plus_username %}
+            <li>
+                <a href="https://plus.google.com/{{ site.google_plus_username }}">
+                    <i class="fa fa-google-plus"></i> Google+
+                </a>
+            </li>
+            {% endif %}
+            {% if site.facebook_username %}
+            <li>
+                <a href="https://www.facebook.com/{{ site.facebook_username }}">
+                    <i class="fa fa-facebook"></i> Facebook
+                </a>
+            </li>
+            {% endif %}
+        </ul>
+      </div>
+
+      <div class="footer-col footer-col-3">
+        <p>{{ site.description }}</p>
+      </div>
+    </div>
+
   </div>
+
 </footer>
