--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,62 +1,60 @@
 <footer class="site-footer">
 
-  <div class="wrapper">
+    <div class="wrapper">
 
-    <h2 class="footer-heading">{{ site.title }}</h2>
+        <div class="footer-col-wrapper">
+            <div class="footer-col">
+                <p class="copy">&copy; {{ site.title }}</p>
+            </div>
+            <div class="footer-col footer-col-right">
+                <ul class="social-media-list">
+                    {% if site.email %}
+                    <li>
+                        <a href="mailto:{{ site.email }}" title="Email">
+                            <i class="fa fa-envelope"></i>
+                        </a>
+                    </li>
+                    {% endif %}
+                    {% if site.github_username %}
+                    <li>
+                        <a href="https://github.com/{{ site.github_username }}" title="GitHub">
+                            <i class="fa fa-github"></i>
+                        </a>
+                    </li>
+                    {% endif %}
+                    {% if site.twitter_username %}
+                    <li>
+                        <a href="https://twitter.com/{{ site.twitter_username }}" title="Twitter">
+                            <i class="fa fa-twitter"></i>
+                        </a>
+                    </li>
+                    {% endif %}
+                    {% if site.linkedin_username %}
+                    <li>
+                        <a href="https://linkedin.com/in/{{ site.linkedin_username }}" title="LinkedIn">
+                            <i class="fa fa-linkedin"></i>
+                        </a>
+                    </li>
+                    {% endif %}
+                    {% if site.google_plus_username %}
+                    <li>
+                        <a href="https://plus.google.com/{{ site.google_plus_username }}" title="Google">
+                            <i class="fa fa-google-plus"></i>
+                        </a>
+                    </li>
+                    {% endif %}
+                    {% if site.facebook_username %}
+                    <li>
+                        <a href="https://www.facebook.com/{{ site.facebook_username }}" title="Facebook">
+                            <i class="fa fa-facebook"></i>
+                        </a>
+                    </li>
+                    {% endif %}
+                </ul>
+            </div>
+        </div>
 
-    <div class="footer-col-wrapper">
-      <div class="footer-col footer-col-1">
-        <ul class="contact-list">
-          <li>{{ site.title }}</li>
-          <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
-        </ul>
-      </div>
 
-      <div class="footer-col footer-col-2">
-        <ul class="social-media-list">
-            {% if site.github_username %}
-            <li>
-                <a href="https://github.com/{{ site.github_username }}">
-                    <i class="fa fa-github"></i> GitHub
-                </a>
-            </li>
-            {% endif %}
-            {% if site.twitter_username %}
-            <li>
-                <a href="https://twitter.com/{{ site.twitter_username }}">
-                    <i class="fa fa-twitter"></i> Twitter
-                </a>
-            </li>
-            {% endif %}
-            {% if site.linkedin_username %}
-            <li>
-                <a href="https://linkedin.com/in/{{ site.linkedin_username }}">
-                    <i class="fa fa-linkedin"></i> LinkedIn
-                </a>
-            </li>
-            {% endif %}
-            {% if site.google_plus_username %}
-            <li>
-                <a href="https://plus.google.com/{{ site.google_plus_username }}">
-                    <i class="fa fa-google-plus"></i> Google+
-                </a>
-            </li>
-            {% endif %}
-            {% if site.facebook_username %}
-            <li>
-                <a href="https://www.facebook.com/{{ site.facebook_username }}">
-                    <i class="fa fa-facebook"></i> Facebook
-                </a>
-            </li>
-            {% endif %}
-        </ul>
-      </div>
-
-      <div class="footer-col footer-col-3">
-        <p>{{ site.description }}</p>
-      </div>
     </div>
-
-  </div>
 
 </footer>
