--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,20 +1,13 @@
 <!DOCTYPE html>
 <html>
 
-  {% include head.html %}
+    {% include head.html %}
 
-  <body>
-
-    {% include header.html %}
-
-    <div class="page-content">
-      <div class="wrapper">
-        {{ content }}
-      </div>
-    </div>
-
-    {% include footer.html %}
-
-  </body>
+    <body>
+        <div class="page-wrap">
+            {{ content }}
+        </div>
+            {% include footer.html %}
+    </body>
 
 </html>
