--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,14 +1,21 @@
 ---
 layout: default
 ---
-<article class="post">
 
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-  </header>
+{% include header.html %}
+<div class="page-content">
+    <div class="wrapper">
 
-  <div class="post-content">
-    {{ content }}
-  </div>
+        <article class="post">
 
-</article>
+            <!--<header class="post-header">-->
+                <!--<h1 class="post-title">{{ page.title }}</h1>-->
+                <!--</header>-->
+
+            <div class="post-content">
+                {{ content }}
+            </div>
+
+        </article>
+    </div>
+</div>
