Styling and branding

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,7 @@
     {% include head.html %}
 
     <body>
+        <!--<div class="jekyll-banner">Powered by Jekyll</div>-->
         <div class="page-wrap">
             {{ content }}
         </div>
