--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,42 +10,42 @@
                 <ul class="social-media-list">
                     {% if site.email %}
                     <li>
-                        <a class="envelope" href="mailto:{{ site.email }}" title="Email">
+                        <a class="envelope" target="_blank" href="mailto:{{ site.email }}" title="Email">
                             <i class="fa fa-envelope"></i>
                         </a>
                     </li>
                     {% endif %}
                     {% if site.github_username %}
                     <li>
-                        <a class="github" href="https://github.com/{{ site.github_username }}" title="GitHub">
+                        <a class="github" target="_blank" href="https://github.com/{{ site.github_username }}" title="GitHub">
                             <i class="fa fa-github"></i>
                         </a>
                     </li>
                     {% endif %}
                     {% if site.twitter_username %}
                     <li>
-                        <a class="twitter" href="https://twitter.com/{{ site.twitter_username }}" title="Twitter">
+                        <a class="twitter" target="_blank" href="https://twitter.com/{{ site.twitter_username }}" title="Twitter">
                             <i class="fa fa-twitter"></i>
                         </a>
                     </li>
                     {% endif %}
                     {% if site.linkedin_username %}
                     <li>
-                        <a class="linkedin" href="https://linkedin.com/in/{{ site.linkedin_username }}" title="LinkedIn">
+                        <a class="linkedin" target="_blank" href="https://linkedin.com/in/{{ site.linkedin_username }}" title="LinkedIn">
                             <i class="fa fa-linkedin"></i>
                         </a>
                     </li>
                     {% endif %}
                     {% if site.google_plus_username %}
                     <li>
-                        <a class="google" href="https://plus.google.com/{{ site.google_plus_username }}" title="Google">
+                        <a class="google" target="_blank" href="https://plus.google.com/{{ site.google_plus_username }}" title="Google">
                             <i class="fa fa-google-plus"></i>
                         </a>
                     </li>
                     {% endif %}
                     {% if site.facebook_username %}
                     <li>
-                        <a class="facebook" href="https://www.facebook.com/{{ site.facebook_username }}" title="Facebook">
+                        <a class="facebook" target="_blank" href="https://www.facebook.com/{{ site.facebook_username }}" title="Facebook">
                             <i class="fa fa-facebook"></i>
                         </a>
                     </li>
