--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -31,7 +31,7 @@ layout: default
             {% endif %}
         </div>
         <aside>
-            {% if page.comments == true %}{% include comments.html %}{% endif %}
+            {% include comments.html %}
         </aside>
     </div>
 </div>
