--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,6 +41,7 @@
         {% include footer.html %}
 
         <script src="{{ site.url }}/js/vendor/jquery-1.9.1.min.js"></script>
+        <script id="dsq-count-scr" src="//amandogra.disqus.com/count.js" async></script>
         <script src="{{ site.url }}/js/main.js"></script>
 
     </body>
