--- a/css/main.scss
+++ b/css/main.scss
@@ -20,6 +20,7 @@ $heading-line-height: 1.5;
 
 $text-letter-spacing: 0.25px;
 $spacing-unit:     30px;
+$spacing-unit-small: 15px;
 
 $text-color:       #424242;
 $background-color: #fdfdfd;
