Added the style to the visited blog post links

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -403,8 +403,12 @@ html, body {
     }
 
 }
-.blog-post-link {
+
+a.blog-post-link {
     font-weight: 400;
+    &:visited {
+         color: $grey-color;
+    }
 }
 
 
